Code coverage and sonar fixes for PAP
Issue-ID: POLICY-5058
Change-Id: I85efd6b0b2ac498959bbaf23ebe1b2ba6e1c320e
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>